fixed some spacing issues like footer

--- a/laurens-site-code/css/styles.css
+++ b/laurens-site-code/css/styles.css
@@ -100,7 +100,7 @@ body {
 }
 
 section {
-  padding: 4.5rem 1.5rem;
+  padding: 4.5rem 1.5rem 0rem 1.5rem;
   box-sizing: border-box;
 }
 
@@ -152,9 +152,11 @@ img {
 
 p {
   line-height: 3rem;
+}
+
+.wide-txt {
   margin: 0 auto 1.5rem auto;
-  max-width: 35rem;
-  min-width: 15rem;
+  max-width: calc(75% - 0.5rem);
 }
 
 h1,
@@ -332,29 +334,41 @@ nav ul {
 footer {
   border-top: solid 2px #4a939c;
   width: 100%;
+  margin-top: 5rem;
 }
 
-footer ul {
+.footer-list-container {
+  max-width: 1140px;
+  margin: 0 auto;
+  padding: 0rem 1.5rem;
+  box-sizing: border-box;
+}
+
+.long-foot {
   display: flex;
   justify-content: flex-start;
-  /* max-width: 844px; */
-  width: calc(75% - 0.5rem);
-  max-width: 846px;
-  margin: 0 auto;
+  max-width: 20rem;
+
   /* background-color: #b11362; */
-  padding: 4.5rem 0 4.5rem 0;
+  padding: 1.5rem 0 1.5rem 0;
 }
-footer li {
-  margin-right: 3.5rem;
-  width: 3rem;
-  height: 3rem;
+.long-foot li {
+  flex: 1 1 2rem;
+  text-align: left;
 
   /* background-color: aqua; */
 }
 
-footer img {
+.long-foot li img {
   width: 3rem;
   height: 3rem;
+}
+
+.footer-list-box {
+  /* max-width: 844px; */
+  width: calc(75% - 0.5rem);
+  max-width: 846px;
+  margin: 0 auto;
 }
 /* --------------------------LOCATION--------------------------- */
 /* --------------------------LOCATION--------------------------- */
@@ -467,6 +481,7 @@ footer img {
   box-sizing: border-box;
   padding: 0 1.5rem 1.5rem 1.5rem;
   border-bottom: solid 2px #4a939c;
+  margin: 0 auto;
 }
 
 .transparent-back {
@@ -571,15 +586,11 @@ footer img {
   border: solid 4px hsla(207, 43%, 28%, 100%);
 }
 
-.long-foot {
-  width: calc(100% - 3rem);
-  max-width: 1140px;
-}
-
 /* --------------------------Gifts--------------------------- */
 
 .dark-backg {
   padding-top: 6rem;
+  padding-bottom: 4.5rem;
   border: none;
   background: 
   /* top, transparent red, faked with gradient */ linear-gradient(
@@ -589,7 +600,6 @@ footer img {
     /* bottom, image */ url(/img/gift-pattern.webp);
 
   color: #ececec;
-  margin-bottom: 6rem;
 }
 
 .dark-backg h3 {
@@ -608,8 +618,7 @@ footer img {
 /* --------------------------------------------------------- */
 
 .line-center {
-  max-width: calc(1140px - 3rem);
-  width: 90%;
+  max-width: calc(75% - 0.5rem);
   margin: 0 auto;
   margin-top: 0;
   margin-bottom: 1.5rem;
@@ -623,7 +632,8 @@ footer img {
 .info-container {
   display: flex;
   flex-wrap: wrap;
-  max-width: 1140px;
+  max-width: calc(75% - 0.5rem);
+  margin: 0 auto;
   justify-content: space-between;
 }
 
@@ -747,7 +757,7 @@ footer img {
 }
 
 .menu-icon {
-  width: 4.5rem;
+  width: 3rem;
 }
 
 .list-view {
@@ -959,6 +969,10 @@ footer img {
   padding-top: 6rem;
 }
 
+.hotel-container {
+  margin-bottom: 2rem;
+}
+
 /*------------------ hotel cards -----------------*/
 
 .location-card-container {
@@ -973,7 +987,9 @@ footer img {
   text-align: left;
   box-shadow: 0 0 20px rgba(146, 144, 144, 0.8);
   background-color: #f4f4f4;
-  flex: 1 1 18.5rem;
+  flex: 1 1 15.5rem;
+  min-width: 15rem;
+  max-width: 25rem;
 }
 
 .card:hover {
@@ -1047,7 +1063,7 @@ ul .card-img {
 }
 
 .show-mobile-menu {
-  top: 5.5rem;
+  top: 3.5rem;
   left: 0rem;
   transition: 0.5s;
 }
